# libanvil

./: .gitmodules  CMakeLists.txt  minecraft_writer.cpp  minecraft_writer.hpp  zlib.lib
include/: byte_stream.h  chunk_tag.h  region_file.h  region_file_reader.h
include/tag/: byte_array_tag.h  byte_tag.h  compound_tag.h  double_tag.h  end_tag.h  float_tag.h  generic_tag.h  int_array_tag.h  int_tag.h  list_tag.h  long_array_tag.h  long_tag.h  short_tag.h  string_tag.h
src/: byte_stream.cpp  region.cpp  region_file.cpp  region_file_reader.cpp
src/tag/: byte_array_tag.cpp  byte_tag.cpp  compound_tag.cpp  double_tag.cpp  end_tag.cpp  float_tag.cpp  int_array_tag.cpp  int_tag.cpp  list_tag.cpp  long_tag.cpp  short_tag.cpp  string_tag.cpp
